--- a/package.json
+++ b/package.json
@@ -2,10 +2,25 @@
   "name": "chat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf ./build",
+    "build": "npm run clean && tsc",
+    "start": "npm run build & node build",
+    "dev": "tsc && concurrently \"tsc --watch \" \"nodemon -q build\""
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ws": "^8.13.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.3",
+    "@types/ws": "^8.5.4",
+    "concurrently": "^8.0.1",
+    "nodemon": "^2.0.22",
+    "rimraf": "^5.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
