--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.8.14",
+    "polymer-cli": "^1.9.0-pre.2",
     "ws": "^8.13.0"
   },
   "devDependencies": {
