--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "scripts": {
     "clean": "rimraf ./build",
     "build": "npm run clean && tsc",
-    "start": "npm run build & node build",
-    "dev": "tsc && concurrently \"tsc --watch \" \"nodemon -q build\""
+    "start": "npm run build & node server",
+    "dev": "tsc && concurrently \"tsc --watch \" \"nodemon -q server\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/polymer": "^1.2.12",
     "bower": "^1.8.14",
+    "express": "^4.18.2",
+    "plugin-typescript": "^8.0.0",
     "polymer-cli": "^1.9.0-pre.2",
+    "systemjs": "^6.14.1",
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.2.3",
     "@types/ws": "^8.5.4",
     "concurrently": "^8.0.1",
