--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/polymer": "^1.2.12",
+    "body-parser": "^1.20.2",
     "bower": "^1.8.14",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
