--- a/package.json
+++ b/package.json
@@ -16,18 +16,28 @@
     "@types/polymer": "^1.2.12",
     "body-parser": "^1.20.2",
     "bower": "^1.8.14",
+    "chai": "^4.3.7",
     "express": "^4.18.2",
+    "mock-socket": "^9.2.1",
     "mongoose": "^7.2.0",
     "plugin-typescript": "^8.0.0",
     "polymer-cli": "^1.9.0-pre.2",
+    "service-worker": "^0.0.0",
     "systemjs": "^6.14.1",
+    "webworker": "^0.8.4",
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-typescript": "^7.21.5",
+    "@types/chai": "^4.3.5",
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.2.3",
     "@types/ws": "^8.5.4",
     "concurrently": "^8.0.1",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
