--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf ./build",
     "build": "npm run clean && tsc",
     "start": "npm run build & node server",
+    "test": "mocha --require ts-node/register 'server/test/**/*.test.ts'",
     "dev": "tsc && concurrently \"tsc --watch \" \"nodemon -q server\""
   },
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/polymer": "^1.2.12",
+    "@types/supertest": "^2.0.12",
     "body-parser": "^1.20.2",
     "bower": "^1.8.14",
     "chai": "^4.3.7",
@@ -23,6 +25,7 @@
     "plugin-typescript": "^8.0.0",
     "polymer-cli": "^1.9.0-pre.2",
     "service-worker": "^0.0.0",
+    "supertest": "^6.3.3",
     "systemjs": "^6.14.1",
     "webworker": "^0.8.4",
     "ws": "^8.13.0"
