--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/polymer": "^1.2.12",
+    "@types/rewire": "^2.5.28",
     "@types/supertest": "^2.0.12",
     "body-parser": "^1.20.2",
     "bower": "^1.8.14",
@@ -24,6 +25,7 @@
     "mongoose": "^7.2.0",
     "plugin-typescript": "^8.0.0",
     "polymer-cli": "^1.9.0-pre.2",
+    "rewire": "^6.0.0",
     "service-worker": "^0.0.0",
     "supertest": "^6.3.3",
     "systemjs": "^6.14.1",
