--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.20.2",
     "bower": "^1.8.14",
     "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mock-socket": "^9.2.1",
     "mongoose": "^7.2.0",
